# CompBau-cpp-runtime

./: CMakeLists.txt  README.md  doxygen.config  main.cpp
cmake/: doxygen.cmake
docs/: ILFileFormat.md
lib/: CMakeLists.txt
lib/spdlog-0.14.0/: async_logger.h  common.h  formatter.h  logger.h  spdlog.h
lib/spdlog-0.14.0/details/: async_log_helper.h  async_logger_impl.h  file_helper.h  log_msg.h  logger_impl.h  mpmc_bounded_q.h  null_mutex.h  os.h  pattern_formatter_impl.h  registry.h  spdlog_impl.h
lib/spdlog-0.14.0/fmt/: fmt.h  ostr.h
lib/spdlog-0.14.0/fmt/bundled/: format.cc  format.h  ostream.cc  ostream.h  posix.cc  posix.h  time.h
lib/spdlog-0.14.0/sinks/: ansicolor_sink.h  base_sink.h  dist_sink.h  file_sinks.h  null_sink.h  ostream_sink.h  sink.h  stdout_sinks.h  wincolor_sink.h
src/: HelloWorld.cpp  HelloWorld.h  runner.cpp  runner.h  utils.h
src/il/: array.h  array_type.h  base_type.h  build_in_type.h  class_type.cpp  class_type.h  instruction.h  instruction_code.h  method.cpp  method.h
src/linker/: Linker.h  LinkerError.h  class_visitor.h  linker.h  linker_error.h  type_visitor.h
src/parser/: UnsupportedFileFormat.h  class_node.h  class_type.h  instruction.h  instruction_code.h  method.h  parse_tree_visitor.h  parser.cpp  parser.h  parser_model.h
test/: HelloWorldTest.cpp  utils_test.cpp
test/il/: array_type_test.cpp  build_in_type_test.cpp  class_type_test.cpp  method_test.cpp
test/linker/: linker_test.cpp
test/parser/: parser_test.cpp
